--- a/migration-tool/migration-web/pom.xml
+++ b/migration-tool/migration-web/pom.xml
@@ -20,7 +20,7 @@
     <jetty.xml>${project.build.outputDirectory}/jetty-env.xml</jetty.xml>
     <jetty.port>8090</jetty.port>
     <system.mode>prod</system.mode>
-    <certificate.version>1.1.4-SNAPSHOT</certificate.version>
+    <certificate.version>1.1.4</certificate.version>
     <cxf.version>2.7.4</cxf.version>
   </properties>
   <profiles>
@@ -216,6 +216,12 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.jayway.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>1.4.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
