--- a/migration-tool/migration-web/src/test/resources/migration-tool-dev.properties
+++ b/migration-tool/migration-web/src/test/resources/migration-tool-dev.properties
@@ -1,23 +1,17 @@
 # Info model migration job database writer SQL statements
-certificate.writer.sql=UPDATE CERTIFICATE SET DOCUMENT = ? WHERE id = ?
+infomigr.step1.writer.sql=UPDATE CERTIFICATE SET DOCUMENT = ? WHERE id = ?
 
 # Info model migration job database reader SQL statements
-certificate.reader.sql.select=SELECT ID, RECEIVED, DOCUMENT, CERTIFICATE_ID
-certificate.reader.sql.from=FROM ORIGINAL_CERTIFICATE
-# The WHERE condition is left out since it is incompatible with how H2 works
-#certificate.reader.sql.where=DOCUMENT LIKE '%<motivering>%' AND DOCUMENT NOT LIKE '%<prognosangivelse>%'
-certificate.reader.sql.where=
-certificate.reader.sortkey=ID
+infomigr.step1.reader.sql.select=SELECT ID, DOCUMENT, CERTIFICATE_ID
+infomigr.step1.reader.sql.from=FROM ORIGINAL_CERTIFICATE
+infomigr.step1.reader.sql.where=WHERE UTF8TOSTRING(DOCUMENT) LIKE '%<motivering>%' AND UTF8TOSTRING(DOCUMENT) NOT LIKE '%<prognosangivelse>%'
+infomigr.step1.reader.sortkey=ID
 
-# CheckCertificateExistsProcessor SQL statement
-certificate.checkexists.sql=SELECT COUNT(*) FROM CERTIFICATE WHERE ID = ?
+infomigr.step2.reader.sql=SELECT c.ID as CERT_ID, c.SIGNED_DATE, c.DOCUMENT as CERT_JSON FROM CERTIFICATE c LEFT JOIN ORIGINAL_CERTIFICATE oc ON c.ID = oc.CERTIFICATE_ID WHERE UTF8TOSTRING(oc.DOCUMENT) LIKE '%<motivering>%' AND UTF8TOSTRING(oc.DOCUMENT) NOT LIKE '%<prognosangivelse>%' AND c.ID IN (select cs1.CERTIFICATE_ID from CERTIFICATE_STATE cs1 left join CERTIFICATE_STATE cs2 on cs1.CERTIFICATE_ID = cs2.CERTIFICATE_ID where cs1.STATE = 'RECEIVED' and cs2.STATE = 'SENT' and TIMESTAMPDIFF('SECOND', cs1.TIMESTAMP, cs2.TIMESTAMP) > 1) AND c.ID NOT IN (SELECT cs2.CERTIFICATE_ID FROM CERTIFICATE_STATE cs2 WHERE cs2.STATE = 'CANCELLED')
 
-# Certificate to stats database reader SQL
-certs2stats.reader.sql.select=SELECT ID, CERTIFICATE_ID
-certs2stats.reader.sql.from=FROM ORIGINAL_CERTIFICATE
-certs2stats.reader.sql.where=WHERE CERTIFICATE_ID IS NOT NULL
-certs2stats.reader.sortkey=ID
+#infomigr.step2.reader.sql.select=SELECT c.ID as CERT_ID, c.SIGNED_DATE, c.DOCUMENT as CERT_JSON 
+#infomigr.step2.reader.sql.from=FROM CERTIFICATE c LEFT JOIN ORIGINAL_CERTIFICATE oc ON c.ID = oc.CERTIFICATE_ID
+#infomigr.step2.reader.sql.where=WHERE UTF8TOSTRING(oc.DOCUMENT) LIKE '%<motivering>%' AND UTF8TOSTRING(oc.DOCUMENT) NOT LIKE '%<prognosangivelse>%' AND c.ID IN (select cs1.CERTIFICATE_ID from CERTIFICATE_STATE cs1 left join CERTIFICATE_STATE cs2 on cs1.CERTIFICATE_ID = cs2.CERTIFICATE_ID where cs1.STATE = 'RECEIVED' and cs2.STATE = 'SENT' and TIMESTAMPDIFF('SECOND', cs1.TIMESTAMP, cs2.TIMESTAMP) > 1) AND c.ID NOT IN (SELECT cs2.CERTIFICATE_ID FROM CERTIFICATE_STATE cs2 WHERE cs2.STATE = 'CANCELLED')
+#infomigr.step2.reader.sortkey=oc.ID
 
-# Certificate to stats processors SQL
-certs2stats.fetchcertificate.sql=SELECT ID, DOCUMENT FROM CERTIFICATE WHERE ID = ?
-certs2stats.statecheck.sql=SELECT COUNT(*) FROM CERTIFICATE_STATE WHERE CERTIFICATE_ID = ? AND STATE = ?
+sendmedicalcertificate.endpoint.url=http://localhost:8080/asdf
