--- a/tools/AnonymiseraIntygsDatabas/pom.xml
+++ b/tools/AnonymiseraIntygsDatabas/pom.xml
@@ -14,6 +14,14 @@
     <groovy.version>2.1.8</groovy.version>
     <groovy.httpBuilder.version>0.6</groovy.httpBuilder.version>
   </properties>
+  <distributionManagement>
+    <repository>
+      <id>cloudbees-private-release-repository</id>
+      <name>Callista Software Release Respository</name>
+      <url>dav:https://repository-callistasoftware.forge.cloudbees.com/release</url>
+      <layout>default</layout>
+    </repository>
+  </distributionManagement>
 
   <dependencies>
 
@@ -79,6 +87,13 @@
   </dependencies>
 
   <build>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-webdav</artifactId>
+        <version>1.0-beta-2</version>
+      </extension>
+    </extensions>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
