--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
     <module>module-api</module>
     <module>web</module>
     <module>specifications</module>
+    <module>persistence</module>
+    <module>tools/LiquibaseRunner</module>
+    <module>tools/LiquibaseRunnerForCertificate</module>
   </modules>
 
   <properties>
