--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -38,7 +38,13 @@
       <artifactId>model</artifactId>
     </dependency>
 
-    <dependency>
+      <dependency>
+          <groupId>se.inera.certificate</groupId>
+          <artifactId>persistence</artifactId>
+          <version>1.3-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
       <groupId>se.inera.certificate</groupId>
       <artifactId>schemas</artifactId>
     </dependency>
