--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -19,6 +19,12 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>liquibase-runner</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>schemas</artifactId>
         </dependency>
 
