--- a/tools/LiquibaseRunner/pom.xml
+++ b/tools/LiquibaseRunner/pom.xml
@@ -5,6 +5,7 @@
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
     <version>1.3-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
