--- a/tools/LiquibaseRunnerForCertificate/pom.xml
+++ b/tools/LiquibaseRunnerForCertificate/pom.xml
@@ -7,6 +7,7 @@
     <groupId>se.inera.certificate</groupId>
     <artifactId>certificate</artifactId>
     <version>1.3-SNAPSHOT</version>
+    <relativePath>../..</relativePath>
   </parent>
 
   <artifactId>liquibase-runner-for-certificate</artifactId>
