--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -37,10 +37,22 @@
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.26</version>
+      <version>5.1.32</version>
     </dependency>
-    
-  </dependencies>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.0</version>
+    </dependency>
+              
+    <dependency>
+      <groupId>org.codehaus.gpars</groupId>
+      <artifactId>gpars</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
+</dependencies>
 
   <build>
     <extensions>
