--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,6 +16,7 @@
     <checkstyle.basedir>${project.basedir}/..</checkstyle.basedir>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
     <buildTimestamp>${maven.build.timestamp}</buildTimestamp>
+    <spring.profile>${system.mode}</spring.profile>
   </properties>
 
   <dependencies>
@@ -176,6 +177,12 @@
 
   <profiles>
     <profile>
+      <id>local-db</id>
+      <properties>
+        <spring.profile>local</spring.profile>
+      </properties>
+    </profile>
+    <profile>
       <id>jetty</id>
       <build>
         <plugins>
@@ -190,7 +197,7 @@
               <systemProperties>
                 <systemProperty>
                   <name>spring.profiles.active</name>
-                  <value>${system.mode}</value>
+                  <value>${spring.profile}</value>
                 </systemProperty>
                 <systemProperty>
                   <name>jetty.port</name>
