--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>se.inera.intyg.intygstjanst</groupId>
     <artifactId>intygstjanst</artifactId>
-    <version>2.1.7</version>
+    <version>0-SNAPSHOT</version>
   </parent>
 
   <artifactId>intygstjanst-web</artifactId>
