--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 
   <groupId>se.inera.intyg.intygstjanst</groupId>
   <artifactId>intygstjanst</artifactId>
-  <version>0-SNAPSHOT</version>
+  <version>2.2.0-b57</version>
   <packaging>pom</packaging>
 
   <name>Intygstjänsten</name>
 
   <properties>
     <!-- Common -->
-    <common.version>0-SNAPSHOT</common.version>
+    <common.version>2.2.0-b46</common.version>
     <common.version.range>(,2.2.0]</common.version.range>
 
     <!-- Tools -->
@@ -27,7 +27,7 @@
     <tools.version.range>(,2.2.0]</tools.version.range>
 
     <!-- Intygstyper -->
-    <intygstyper.version>0-SNAPSHOT</intygstyper.version>
+    <intygstyper.version>2.2.0-b49</intygstyper.version>
     <intygstyper.version.range>(,2.2.0]</intygstyper.version.range>
 
     <!-- Schemas -->
@@ -41,7 +41,7 @@
     <intyg-insuranceprocess.version>0-SNAPSHOT</intyg-insuranceprocess.version>
     <intyg-insuranceprocess.version.range>(,1.0.0]</intyg-insuranceprocess.version.range>
 
-    <intyg-transportstyrelsen.version>0-SNAPSHOT</intyg-transportstyrelsen.version>
+    <intyg-transportstyrelsen.version>1.0.0-b6</intyg-transportstyrelsen.version>
     <intyg-transportstyrelsen.version.range>(,1.0.0]</intyg-transportstyrelsen.version.range>
 
   </properties>
