--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>se.inera.intyg.intygstjanst</groupId>
     <artifactId>intygstjanst</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>2.2.0-RC1</version>
   </parent>
 
   <artifactId>intygstjanst-persistence</artifactId>
