--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
 
   <groupId>se.inera.intyg.intygstjanst</groupId>
   <artifactId>intygstjanst</artifactId>
-  <version>2.2.0-RC4</version>
+  <version>0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Intygstjänsten</name>
 
   <properties>
     <!-- Common -->
-    <common.version>2.2.0-RC4</common.version>
+    <common.version>0-SNAPSHOT</common.version>
     <common.version.range>(,2.2.0]</common.version.range>
 
     <!-- Tools -->
@@ -27,7 +27,7 @@
     <tools.version.range>(,2.2.0]</tools.version.range>
 
     <!-- Intygstyper -->
-    <intygstyper.version>2.2.0-RC4</intygstyper.version>
+    <intygstyper.version>0-SNAPSHOT</intygstyper.version>
     <intygstyper.version.range>(,2.2.0]</intygstyper.version.range>
 
     <!-- Schemas -->
@@ -35,13 +35,13 @@
     <rivta-insuranceprocess.version>3.1.0.0</rivta-insuranceprocess.version>
     <rivta-itintegration-monitoring.version>1.0.0.0</rivta-itintegration-monitoring.version>
 
-    <intyg-clinicalprocess.version>1.0.0-RC1</intyg-clinicalprocess.version>
+    <intyg-clinicalprocess.version>0-SNAPSHOT</intyg-clinicalprocess.version>
     <intyg-clinicalprocess.version.range>(,1.0.0]</intyg-clinicalprocess.version.range>
 
-    <intyg-insuranceprocess.version>1.0.0-RC1</intyg-insuranceprocess.version>
+    <intyg-insuranceprocess.version>0-SNAPSHOT</intyg-insuranceprocess.version>
     <intyg-insuranceprocess.version.range>(,1.0.0]</intyg-insuranceprocess.version.range>
 
-    <intyg-transportstyrelsen.version>1.0.0-RC1</intyg-transportstyrelsen.version>
+    <intyg-transportstyrelsen.version>0-SNAPSHOT</intyg-transportstyrelsen.version>
     <intyg-transportstyrelsen.version.range>(,1.0.0]</intyg-transportstyrelsen.version.range>
 
   </properties>
