--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,11 @@
   <properties>
     <!-- Common -->
     <common.version>0-SNAPSHOT</common.version>
-    <common.version.range>(,2.2.0]</common.version.range>
-
-    <!-- Tools -->
-    <tools.version>0-SNAPSHOT</tools.version>
-    <tools.version.range>(,2.2.0]</tools.version.range>
+    <common.version.range>(,2.3.0]</common.version.range>
 
     <!-- Intygstyper -->
     <intygstyper.version>0-SNAPSHOT</intygstyper.version>
-    <intygstyper.version.range>(,2.2.0]</intygstyper.version.range>
+    <intygstyper.version.range>(,2.3.0]</intygstyper.version.range>
 
     <!-- Schemas -->
     <rivta-clinicalprocess.version>1.0.RC3.0</rivta-clinicalprocess.version>
@@ -195,8 +191,7 @@
             intygstyper.version,
             intyg-clinicalprocess.version,
             intyg-insuranceprocess.version,
-            intyg-transportstyrelsen.version,
-            tools.version
+            intyg-transportstyrelsen.version
           </includeProperties>
           <properties>
             <property>
@@ -218,10 +213,6 @@
             <property>
               <name>intyg-transportstyrelsen.version</name>
               <version>${intyg-transportstyrelsen.version.range}</version>
-            </property>
-            <property>
-              <name>tools.version</name>
-              <version>${tools.version.range}</version>
             </property>
           </properties>
         </configuration>
