--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -235,6 +235,12 @@
       </properties>
     </profile>
     <profile>
+      <id>ip30</id>
+      <properties>
+        <certificate.baseUrl>https://intyg.ip20.nordicmedtest.sjunet.org/inera-certificate/</certificate.baseUrl>
+      </properties>
+    </profile>
+    <profile>
       <id>ip40</id>
       <properties>
         <certificate.baseUrl>https://intygstjanst.ip40.nordicmedtest.sjunet.org/inera-certificate/</certificate.baseUrl>
