--- a/ansible/roles/intygstjanst-resurser/tasks/main.yml
+++ b/ansible/roles/intygstjanst-resurser/tasks/main.yml
@@ -1,13 +1,20 @@
 ---
 # file: roles/intygstjanst-resurser/tasks/main.yml
 
+- name: configure shared jdbc datasource for Intygstjansten
+  lineinfile:
+    dest="{{ tomcat_conf }}/server.xml"
+    regexp="    <Resource name='sharedIntyg'"
+    insertbefore="  </GlobalNamingResources>"
+    line="    <Resource name='sharedIntyg' global='sharedIntyg'  auth='Container' type='javax.sql.DataSource' username='{{ database_username }}' password='{{ database_password }}' driverClassName='{{ database_driver }}' url='{{ database_url }}' maxActive='{{ database_pool_maxActive }}' maxIdle='{{ database_pool_maxIdle }}' minIdle='{{ database_pool_minIdle }}' initialSize='{{ database_pool_initialSize }}' validationQuery='SELECT 1' validationQueryTimeout='3' testWhileIdle='true' timeBetweenEvictionRunsMillis='300000' minEvictableIdleTimeMillis='60000' defaultAutocommit='false' />"
+
 - name: configure jdbc resource
   lineinfile:
     dest="{{ tomcat_conf }}/context.xml"
-    regexp="    <Resource name='jdbc/intyg'"
+    regexp="    <ResourceLink name='jdbc/intyg'|    <Resource name='jdbc/intyg'"
     insertbefore="</Context>"
-    line="    <Resource name='jdbc/intyg' auth='Container' type='javax.sql.DataSource' username='{{ database_username }}' password='{{ database_password }}' driverClassName='{{ database_driver }}' url='{{ database_url }}' maxActive='{{ database_pool_maxActive }}' maxIdle='{{ database_pool_maxIdle }}' minIdle='{{ database_pool_minIdle }}' initialSize='{{ database_pool_initialSize }}' validationQuery='SELECT 1' validationQueryTimeout='3' testWhileIdle='true' timeBetweenEvictionRunsMillis='300000' minEvictableIdleTimeMillis='60000' defaultAutocommit='false' />"
-    
+    line="    <ResourceLink name='jdbc/intyg' global='sharedIntyg' type='javax.sql.DataSource'/>"
+
 - name: configure connection factory
   lineinfile:
     dest="{{ tomcat_conf }}/context.xml"
