--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -228,6 +228,12 @@
       </properties>
     </profile>
     <profile>
+      <id>build-server</id>
+      <properties>
+        <certificate.baseUrl>https://intygstjanst.inera.nordicmedtest.se/inera-certificate/</certificate.baseUrl>
+      </properties>
+    </profile>
+    <profile>
       <id>ip20</id>
       <properties>
         <certificate.baseUrl>https://intyg.ip20.nordicmedtest.sjunet.org/inera-certificate/</certificate.baseUrl>
