--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,9 @@
     <rivta-insuranceprocess.version>3.1.0.0</rivta-insuranceprocess.version>
     <rivta-itintegration-monitoring.version>1.0.0.0</rivta-itintegration-monitoring.version>
 
-    <intyg-clinicalprocess.version>0-SNAPSHOT</intyg-clinicalprocess.version>
-    <intyg-clinicalprocess.version.range>(,1.0.0]</intyg-clinicalprocess.version.range>
-
-    <intyg-insuranceprocess.version>0-SNAPSHOT</intyg-insuranceprocess.version>
-    <intyg-insuranceprocess.version.range>(,1.0.0]</intyg-insuranceprocess.version.range>
-
-    <intyg-transportstyrelsen.version>0-SNAPSHOT</intyg-transportstyrelsen.version>
-    <intyg-transportstyrelsen.version.range>(,1.0.0]</intyg-transportstyrelsen.version.range>
+    <intyg-clinicalprocess.version>1.0.0</intyg-clinicalprocess.version>
+    <intyg-insuranceprocess.version>1.0.0</intyg-insuranceprocess.version>
+    <intyg-transportstyrelsen.version>1.0.0</intyg-transportstyrelsen.version>
 
   </properties>
 
@@ -188,10 +183,7 @@
         <configuration>
           <includeProperties>
             common.version,
-            intygstyper.version,
-            intyg-clinicalprocess.version,
-            intyg-insuranceprocess.version,
-            intyg-transportstyrelsen.version
+            intygstyper.version
           </includeProperties>
           <properties>
             <property>
@@ -201,18 +193,6 @@
             <property>
               <name>intygstyper.version</name>
               <version>${intygstyper.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-clinicalprocess.version</name>
-              <version>${intyg-clinicalprocess.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-insuranceprocess.version</name>
-              <version>${intyg-insuranceprocess.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-transportstyrelsen.version</name>
-              <version>${intyg-transportstyrelsen.version.range}</version>
             </property>
           </properties>
         </configuration>
