--- a/tools/AnonymiseraIntygsDatabas/pom.xml
+++ b/tools/AnonymiseraIntygsDatabas/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>se.inera.intyg.common</groupId>
     <artifactId>common-pom</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9.2</version>
   </parent>
 
   <groupId>se.inera.intyg.intygstjanst</groupId>
@@ -20,7 +20,7 @@
 
   <dependencies>
 
-    <!-- Tools -->
+    <!-- Common -->
     <dependency>
       <groupId>se.inera.intyg.common</groupId>
       <artifactId>anonymisering</artifactId>
