--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -10,13 +10,23 @@
 - name: download intygstjanst-liquibase-runner-{{ version }}.jar
   get_url: url=http://repository-callistasoftware.forge.cloudbees.com/{{ repo }}/se/inera/intyg/intygstjanst/intygstjanst-liquibase-runner/{{ version }}/intygstjanst-liquibase-runner-{{ version }}.jar
       dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.jar
+  when: deploy_from_repo
+
+- name: copy intygstjanst-liquibase-runner-{{ version }}.jar
+  copy: src={{ inventory_dir }}/../tools/liquibase-runner/target/intygstjanst-liquibase-runner.jar dest={{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.jar
+  when: not deploy_from_repo
 
 - name: run liquibase update
   command: java -jar {{ releases_folder }}/intygstjanst-liquibase-runner-{{ version }}.jar --changeLogFile="changelog/changelog.xml" --username="{{ database_username }}" --password="{{ database_password }}" --url="{{ database_url }}" --driver="{{ database_driver }}" --contexts=none update
 
-- name: Download intygstjanst-web-{{ version }}.war
+- name: download intygstjanst-web-{{ version }}.war
   get_url: url=http://repository-callistasoftware.forge.cloudbees.com/{{ repo }}/se/inera/intyg/intygstjanst/intygstjanst-web/{{ version }}/intygstjanst-web-{{ version }}.war
            dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
+  when: deploy_from_repo
+
+- name: copy intygstjanst-web-{{ version }}.war
+  copy: src={{ inventory_dir }}/../web/target/intygstjanst.war dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
+  when: not deploy_from_repo
 
 - name: remove old version of unpacked war
   file: state=absent
@@ -26,10 +36,10 @@
   file: state=absent
       path={{ webapps_folder }}/inera-certificate.war
 
-- name: Deploy intygstjanst-web-{{ version }}.war as inera-certificate.war
+- name: deploy intygstjanst-web-{{ version }}.war as inera-certificate.war
   command: cp {{ releases_folder }}/intygstjanst-web-{{ version }}.war {{ webapps_folder }}/inera-certificate.war
 
-- name: Create version file
+- name: create version file
   template: src=version.txt.j2 dest={{ webapps_folder }}/version.txt
 
 - name: pull configuration repo to get new branches
