--- a/pom.xml
+++ b/pom.xml
@@ -20,25 +20,20 @@
   <properties>
     <!-- Common -->
     <common.version>0-SNAPSHOT</common.version>
-    <common.version.range>(,2.4.0]</common.version.range>
+    <common.version.range>(,2.5.0]</common.version.range>
 
     <!-- Intygstyper -->
     <intygstyper.version>0-SNAPSHOT</intygstyper.version>
-    <intygstyper.version.range>(,2.4.0]</intygstyper.version.range>
+    <intygstyper.version.range>(,2.5.0]</intygstyper.version.range>
 
     <!-- Schemas -->
     <rivta-clinicalprocess.version>1.0.RC3.0</rivta-clinicalprocess.version>
     <rivta-insuranceprocess.version>3.1.0.0</rivta-insuranceprocess.version>
     <rivta-itintegration-monitoring.version>1.0.0.0</rivta-itintegration-monitoring.version>
 
-    <intyg-clinicalprocess.version>0-SNAPSHOT</intyg-clinicalprocess.version>
-    <intyg-clinicalprocess.version.range>(,1.0.0]</intyg-clinicalprocess.version.range>
-
-    <intyg-insuranceprocess.version>0-SNAPSHOT</intyg-insuranceprocess.version>
-    <intyg-insuranceprocess.version.range>(,1.0.0]</intyg-insuranceprocess.version.range>
-
-    <intyg-transportstyrelsen.version>0-SNAPSHOT</intyg-transportstyrelsen.version>
-    <intyg-transportstyrelsen.version.range>(,1.0.0]</intyg-transportstyrelsen.version.range>
+    <intyg-clinicalprocess.version>1.0.0</intyg-clinicalprocess.version>
+    <intyg-insuranceprocess.version>1.0.0</intyg-insuranceprocess.version>
+    <intyg-transportstyrelsen.version>1.0.0</intyg-transportstyrelsen.version>
 
     <skip-coverage>true</skip-coverage>
   </properties>
@@ -229,10 +224,7 @@
         <configuration>
           <includeProperties>
             common.version,
-            intygstyper.version,
-            intyg-clinicalprocess.version,
-            intyg-insuranceprocess.version,
-            intyg-transportstyrelsen.version
+            intygstyper.version
           </includeProperties>
           <properties>
             <property>
@@ -242,18 +234,6 @@
             <property>
               <name>intygstyper.version</name>
               <version>${intygstyper.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-clinicalprocess.version</name>
-              <version>${intyg-clinicalprocess.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-insuranceprocess.version</name>
-              <version>${intyg-insuranceprocess.version.range}</version>
-            </property>
-            <property>
-              <name>intyg-transportstyrelsen.version</name>
-              <version>${intyg-transportstyrelsen.version.range}</version>
             </property>
           </properties>
         </configuration>
