--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
 
   <!-- Listener for external logback configuration file -->
   <listener>
-      <listener-class>se.inera.certificate.logging.LogbackConfiguratorContextListener</listener-class>
+      <listener-class>se.inera.intyg.common.util.logging.LogbackConfiguratorContextListener</listener-class>
   </listener>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
