--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,3 @@
-plugins {
-  id 'org.ajoberstar.grgit' version '1.5.1'
-  id 'org.sonarqube' version '2.1-rc3'
-}
-
 ext.nexusUsername = System.properties['nexusUsername']
 ext.nexusPassword = System.properties['nexusPassword']
 
@@ -12,6 +7,7 @@ ext {
 
 allprojects  {
   apply plugin: 'maven'
+  apply plugin: 'org.ajoberstar.grgit'
 
   def baseVersion = '3.0.'
 
@@ -19,14 +15,6 @@ allprojects  {
   version = System.env.BUILD_NUMBER != null ? baseVersion + System.env.BUILD_NUMBER : '0-SNAPSHOT'
   rootProject.ext.commonVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : baseVersion + '+'
   rootProject.ext.typerVersion = (version == '0-SNAPSHOT') ? '0-SNAPSHOT' : baseVersion + '+'
-
-  buildscript {
-    repositories {
-      mavenLocal()
-      maven { url "https://plugins.gradle.org/m2/" }
-      jcenter()
-    }
-  }
 }
 
 subprojects {
@@ -38,9 +26,7 @@ subprojects {
   repositories {
     mavenLocal()
     maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/releases/" }
-    maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/nightly/" }
     maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/snapshots/" }
-    maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/thirdparty/" }
     maven { url "http://repo.maven.apache.org/maven2" }
   }
 
@@ -191,5 +177,19 @@ if (project.hasProperty('runSonar')) {
         skipProject = true
       }
     }
+  }
+}
+
+buildscript {
+  dependencies {
+    classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.1"
+    classpath 'org.ajoberstar:gradle-git:1.5.1'
+    classpath 'org.akhikhl.gretty:gretty:+'
+  }
+
+  repositories {
+    maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/releases/" }
+    maven { url "https://build-inera.nordicmedtest.se/nexus/content/repositories/snapshots/" }
+    maven { url "https://plugins.gradle.org/m2/" }
   }
 }
