--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 ext {
-  springVersion = "4.2.2.RELEASE"
+    springVersion = "4.2.2.RELEASE"
+    activeMqVersion = "5.13.4"
+    mysqlVersion = "5.1.39"
+    h2Version = "1.3.176"
 }
 
 allprojects  {
