--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -24,5 +24,5 @@ dependencies {
 
   testCompile "org.springframework:spring-test:${springVersion}"
 
-  testRuntime 'com.h2database:h2:1.3.174'
+  testRuntime "com.h2database:h2:${h2Version}"
 }
