--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -25,6 +25,6 @@ configurations.runtime {
 dependencies {
   runtime project(':intygstjanst-persistence')
 
-  runtime group: 'mysql', name: 'mysql-connector-java', version:'5.1.24'
-  runtime group: 'org.liquibase', name: 'liquibase-core', version:'3.3.1'
+  runtime "mysql:mysql-connector-java:${mysqlVersion}"
+  runtime "org.liquibase:liquibase-core:3.3.5"
 }
