--- a/web/build.gradle
+++ b/web/build.gradle
@@ -50,7 +50,7 @@ dependencies {
   compile "se.inera.intyg.intygstyper:lisu:${typerVersion}"
   compile "se.inera.intyg.intygstyper:luae_fs:${typerVersion}"
   compile "se.inera.intyg.intygstyper:luae_na:${typerVersion}"
-  compile (group: 'se.inera.intyg.intygstyper', name:'fk7263', version: "${typerVersion}") {
+  compile ("se.inera.intyg.intygstyper:fk7263:${typerVersion}") {
     exclude(module: 'insuranceprocess-healthreporting-schemas')
     exclude(module: 'fk-vardgivare-sjukvard-schemas')
     exclude(module: 'ServiceContracts_itintegration_monitoring')
@@ -72,8 +72,8 @@ dependencies {
   providedCompile 'org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1'
   providedCompile 'javax.servlet:servlet-api:2.5'
 
-  gretty 'org.apache.activemq:activemq-client:5.13.0'
-  gretty 'org.apache.activemq:activemq-broker:5.13.0'
-  gretty "com.h2database:h2:1.3.174"
-  gretty "mysql:mysql-connector-java:5.1.24"
+  gretty "org.apache.activemq:activemq-client:${activeMqVersion}"
+  gretty "org.apache.activemq:activemq-broker:${activeMqVersion}"
+  gretty "com.h2database:h2:${h2Version}"
+  gretty "mysql:mysql-connector-java:${mysqlVersion}"
 }
